--- a/ListView1/app/src/main/res/layout/activity_main.xml
+++ b/ListView1/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,9 @@
         app:layout_constraintStart_toStartOf="@id/titleTV"
         app:layout_constraintTop_toBottomOf="@id/titleTV"
         app:layout_constraintVertical_bias="1.0"
-        tools:listitem="@layout/list_item" />
+        tools:listitem="@layout/list_item"
+        android:divider="10.dp"
+        android:dividerHeight="20.dp"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
