--- a/ListView1/app/src/main/res/layout/list_item.xml
+++ b/ListView1/app/src/main/res/layout/list_item.xml
@@ -6,7 +6,8 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
     android:padding="10dp"
-    app:cardBackgroundColor="#5021110F"
+    app:cardBackgroundColor="#ffffff"
+    app:cardElevation="@android:dimen/config_shapeCornerRadiusLarge"
     app:cardCornerRadius="28dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,7 +19,7 @@
             android:id="@+id/profileCIV"
             android:layout_width="102dp"
             android:layout_height="102dp"
-            android:src="@drawable/person"
+            android:src="@drawable/waitervincenzo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -29,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
             android:padding="10dp"
-            android:text="Mr.Bean"
+            android:text="Vincenzo Cassano"
             android:textAlignment="textStart"
             android:textColor="@color/black"
             android:textSize="22sp"
@@ -41,10 +42,10 @@
         <TextView
             android:id="@+id/descriptionTV"
             android:layout_width="0dp"
-            android:maxLines="1"
+            android:maxLines="2"
             android:layout_height="wrap_content"
             android:padding="3dp"
-            android:text="The ScaleType is always CENTER_CROP and you'll get an exception if you try to change it. This is (currently) by design as it's perfectly fine for profile images.He is a very good comedian"
+            android:text="The only way to get rid of your anger is by fighting it"
             android:textAlignment="textStart"
             android:textColor="#80000000"
             android:textSize="16sp"
