--- a/listView5/app/src/main/res/layout/activity_main.xml
+++ b/listView5/app/src/main/res/layout/activity_main.xml
@@ -22,17 +22,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ListView
-        android:id="@+id/listView"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="8.dp"
-        android:layout_marginTop="10dp"
-        tools:listitem="@layout/items_list"
+        android:layout_marginTop="20dp"
+        app:flow_horizontalGap="20.dp"
+        app:flow_verticalGap="10.dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/titleTV"
         app:layout_constraintStart_toStartOf="@id/titleTV"
         app:layout_constraintTop_toBottomOf="@id/titleTV"
-        />
+        tools:listitem="@layout/items_list" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
