--- a/listView4/app/src/main/res/layout/activity_main.xml
+++ b/listView4/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:padding="15.dp"
+    >
 
 
     <TextView
@@ -23,14 +25,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ListView
-        android:id="@+id/listView"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginHorizontal="8.dp"
         android:layout_marginTop="10dp"
-        android:dividerHeight="20.dp"
-        android:divider="@android:color/transparent"
+        app:flow_verticalGap="20.dp"
         tools:listitem="@layout/list_item"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/titleTV"
