--- a/listView4/app/src/main/res/layout/list_item.xml
+++ b/listView4/app/src/main/res/layout/list_item.xml
@@ -5,7 +5,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="20dp"
+    app:cardElevation="2.dp"
+    android:layout_marginBottom="15.dp"
     app:cardBackgroundColor="@color/white"
+
     >
 
 
@@ -76,17 +79,14 @@
             />
 
 
-
         <ImageView
             android:id="@+id/clossBTN"
-            android:layout_width="80.dp"
-            android:layout_height="wrap_content"
+            android:layout_width="60.dp"
+            android:layout_height="50.dp"
+            android:layout_marginEnd="4dp"
             android:src="@drawable/imagelinkedin"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="30.dp"
-            android:layout_marginTop="10dp"
-           />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
             android:layout_width="match_parent"
