--- a/listView3/app/src/main/res/layout/list_item.xml
+++ b/listView3/app/src/main/res/layout/list_item.xml
@@ -6,6 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="20dp"
     app:cardBackgroundColor="@color/black"
+    android:layout_marginBottom="15.dp"
     >
 
 
@@ -46,6 +47,7 @@
             />
 
         <TextView
+            android:id="@+id/postBy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toEndOf="@id/profileTV"
