--- a/ListView2/app/src/main/res/layout/activity_main.xml
+++ b/ListView2/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     android:background="#ECECEC"
     tools:context=".MainActivity"
-    android:layout_marginTop=""
     android:padding="15.dp">
 
     <TextView
@@ -22,7 +21,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
