--- a/ListView2/app/src/main/res/layout/item_list.xml
+++ b/ListView2/app/src/main/res/layout/item_list.xml
@@ -14,9 +14,9 @@
         android:padding="20dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profileTV"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:id="@+id/profileImg"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
             android:src="@drawable/person"
             app:layout_constraintBaseline_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -26,28 +26,34 @@
             android:id="@+id/nameTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20.dp"
+
+            android:layout_marginTop="20.dp"
+            android:layout_marginEnd="105dp"
             android:text="Profile 1"
             android:textColor="#ECECEC"
-            android:textSize="25dp"
+            android:textSize="15dp"
             android:textStyle="bold"
-           android:layout_marginTop="20.dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toStartOf="@id/profileImg"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/designation"
+
+            />
 
         <TextView
+            android:id="@+id/designation"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20.dp"
+            android:layout_marginEnd="20.dp"
+            android:maxLines="2"
             android:text="Android Mobile Application Developer "
             android:textColor="#ECECEC"
-            android:maxLines="2"
             android:textSize="15dp"
             android:textStyle="bold"
-            android:layout_marginEnd="20.dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/profileImg"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/profileTV"
             app:layout_constraintTop_toTopOf="@id/nameTV" />
 
 
